# rinha-2024-q1-rust

./: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose-dev.yml  executar-teste-local.sh
src/: db.rs  handlers.rs  main.rs  models.rs
