[package]
name = "rinha02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde", "rustc-serialize"] }
deadpool-postgres = "0.12.1"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
warp = "0.3.6"
